# workspaces/service/src/route-controllers/user.controller.ts
@@ -1,6 +1,16 @@
-import { Body, Controller, Get, Post, Route, Security, Request } from 'tsoa';
+import {
+    Body,
+    Controller,
+    Get,
+    Post,
+    Route,
+    Security,
+    Request,
+    Response,
+} from 'tsoa';
 import { SbRequest, signJwt } from '../authentication.js';
 import { sagebookDb } from '../db.js';
+import { SagebookError } from '../errors.js';
 
 @Route('user')
 export class UserController extends Controller {
@@ -18,16 +28,25 @@ export class UserController extends Controller {
      * Creates a new user and creates session jwt
      */
     @Post('create')
-    async createUser(@Body() requestBody: { email: string; password: string }) {
-        const userId = await sagebookDb.users.createUser(
-            requestBody.email,
-            requestBody.password,
-        );
+    @Response<SagebookError>(400, 'Invalid Credentials')
+    async createUser(
+        @Body() requestBody: { email: string; password: string },
+    ): Promise<{ token: string }> {
+        let userId;
+        try {
+            userId = await sagebookDb.users.createUser(
+                requestBody.email,
+                requestBody.password,
+            );
+        } catch (e: any) {
+            throw new SagebookError(400, e.message);
+        }
+
         const token = signJwt({
             userId,
         });
 
         this.setHeader('Set-Cookie', `x-access-token=${token}`);
-        return 'Success';
+        return { token };
     }
 }
